--- a/WinApiLeaning/WinApiLeaning.vcxproj
+++ b/WinApiLeaning/WinApiLeaning.vcxproj
@@ -160,8 +160,7 @@
     <ClInclude Include="..\Codes\WinApiLeaning.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Demo.cpp" />
-    <ClCompile Include="Typer.cpp" />
+    <ClCompile Include="7.Checker1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
